# netagent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/: README.md
netagent/: __init__.py  cli.py  config.py  orchestrator.py
netagent/audit/: __init__.py
netagent/clarification/: __init__.py  policy.py  risk.py  uncertainty.py
netagent/examples/: __init__.py  hello_world.py
netagent/llm/: __init__.py  claude_client.py
netagent/memory/: __init__.py
netagent/safety/: __init__.py  taxonomy.py
netagent/tools/: __init__.py  show_commands.py
testbed/fault_scenarios/: README.md  bgp_md5_mismatch_r1_r2.yaml
testbed/topologies/: README.md
tests/: test_clarification.py  test_smoke.py
ui/: streamlit_app.py
